--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,7 @@ jobs:
             mkdir resources
             cd ./resources
             touch ./application.yml
-            echo "$OCCUPY_DEPLOY" | base64 --decode > ./application.yml
+            echo "$OCCUPY_DEPLOY" > ./application.yml
             
       - name: Build with Gradle
         uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
@@ -88,12 +88,4 @@ jobs:
                 sudo docker pull minchogt/hicardi
                 docker-compose up -d main-service
                 docker image prune -f
-      
-#      - name: Use SSH agent for remote commands
-#        env:
-#          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
-#        run: |
-#          eval `ssh-agent -s`
-#          ssh-add - <<< "${{ secrets.SSH_PRIVATE_KEY }}"
-#          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} "sudo nohup java -jar ~/cicd/*.jar &"
-#          ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SERVER_IP }} "sudo fuser -k 8080/tcp"
+                
